--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,7 +7,7 @@
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.545946988083-m14qphr3aq3l7bak0jprb22oarns5jk0</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCgvAz_Bz5ZKx199QseH-EqXQ4BVNMmb-I</string>
+	<string>Put Your API_KEY</string>
 	<key>GCM_SENDER_ID</key>
 	<string>545946988083</string>
 	<key>PLIST_VERSION</key>
